Made a few changes to try to fix the text wrap on the input fields.

--- a/sources/css/styles.css
+++ b/sources/css/styles.css
@@ -575,6 +575,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 4rem;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
 .max-h-64{
   max-height: 16rem;
 }
@@ -1038,6 +1042,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .placeholder\:font-normal::placeholder{
   font-weight: 400;
+}
+
+.placeholder\:leading-none::-moz-placeholder{
+  line-height: 1;
+}
+
+.placeholder\:leading-none:-ms-input-placeholder{
+  line-height: 1;
+}
+
+.placeholder\:leading-none::placeholder{
+  line-height: 1;
 }
 
 .placeholder\:text-black::-moz-placeholder{
